Fix overflowing carousel image horizontal tablet

--- a/components/Carousel.module.css
+++ b/components/Carousel.module.css
@@ -20,7 +20,7 @@
 .imageContainer {
 	top: 100px;
 	width: 60%;
-	height: 100%;
+	height: 80%;
 	text-align: center;
 	position: relative;
 }
@@ -102,6 +102,54 @@
 	border-radius: 50%;
 }
 
+
+
+@media screen and (min-width: 577px) and (max-width: 1100px) {
+	.carouselContainer {
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-between;
+		padding: 0px 0px;
+	}
+	
+	.imageContainer {
+		top: 0px;
+		margin-top: 60px;
+		width: 75%;
+		max-height: 50%;
+	}
+	
+	.leftArrow {
+		left: 30px;
+	}
+	
+	.rightArrow {
+		right: 30px;
+	}
+
+	.leftArrow,
+	.rightArrow {
+		top: 120px;
+		width: 70px;
+	}
+	
+	.close {
+		right: 30px;
+	}
+
+	.name {
+		font-size: 2.5rem;
+	}
+	
+	.details {
+		width: 60%;
+		max-height: 50%;
+		/* font-size: 1rem; */
+		padding-left: 0px;
+	}
+}
+
+
 @media screen and (max-width: 576px) {
 	.carouselContainer {
 		flex-direction: column;
@@ -147,49 +195,4 @@
 		padding-left: 0px;
 	}
 
-}
-
-@media screen and (min-width: 577px) and (max-width: 1100px) {
-	.carouselContainer {
-		flex-direction: column;
-		align-items: center;
-		justify-content: space-between;
-		padding: 0px 0px;
-	}
-	
-	.imageContainer {
-		top: 0px;
-		margin-top: 60px;
-		width: 75%;
-		max-height: 50%;
-	}
-	
-	.leftArrow {
-		left: 30px;
-	}
-	
-	.rightArrow {
-		right: 30px;
-	}
-
-	.leftArrow,
-	.rightArrow {
-		top: 120px;
-		width: 70px;
-	}
-	
-	.close {
-		right: 30px;
-	}
-
-	.name {
-		font-size: 2.5rem;
-	}
-	
-	.details {
-		width: 60%;
-		max-height: 50%;
-		/* font-size: 1rem; */
-		padding-left: 0px;
-	}
 }
